--- a/main.scss
+++ b/main.scss
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap");
+@import "src/styles/varColors.scss";
+@import "src//styles/icon.scss";
 @import "src/styles/global.scss";
 @import "src/styles/chats.scss";
 @import "src/styles/login.scss";
