--- a/src/styles/chats.scss
+++ b/src/styles/chats.scss
@@ -1,12 +1,13 @@
 .chats {
   display: flex;
-  width: 90%;
+  width: 100%;
   height: 100%;
+  padding-left: 64px;
 
   &__menu {
     width: 310px;
-    background-color: #fbfbfb;
-    border-right: 1px solid #eaeaea;
+    background-color: $bg-color-light;
+    border-right: 1px solid $border-color;
     height: 100vh;
     padding: 21px 10px 0 10px;
   }
@@ -23,7 +24,7 @@
       align-items: center;
       text-decoration: none;
       font-size: 12px;
-      color: #999999;
+      color: $text-light-grey-color;
 
       & svg {
         width: 12px;
@@ -33,7 +34,7 @@
       width: 100%;
       border: 0;
       outline: 0;
-      border-color: #efefef;
+      border-color: $input-bd-color;
       text-align: center;
       border-radius: 5px;
       padding: 10px;
@@ -46,7 +47,7 @@
     list-style-type: none;
 
     &__item {
-      border-top: 1px solid #eaeaea;
+      border-top: 1px solid $border-color;
       height: 71px;
       display: flex;
       padding: 12px 0;
@@ -56,7 +57,7 @@
         height: 47px;
         border-radius: 50%;
         margin-right: 10px;
-        background-color: gray;
+        background-color: $t-color;
       }
 
       &-info {
@@ -67,7 +68,7 @@
 
   &-info {
     &__title {
-      color: #1e1e1e;
+      color: $text-dark-color;
       font-size: 13px;
       font-weight: 600;
       line-height: 13px;
@@ -77,7 +78,7 @@
       font-size: 12px;
       font-weight: 500;
       line-height: 15px;
-      color: #999999;
+      color: $text-light-grey-color;
     }
   }
 
@@ -87,7 +88,7 @@
     justify-content: space-between;
 
     &__time {
-      color: #999999;
+      color: $text-light-grey-color;
       font-size: 9px;
       line-height: 13px;
     }
@@ -97,8 +98,8 @@
       height: 20px;
       font-size: 11px;
       line-height: 12px;
-      color: #ffffff;
-      background-color: #3369f3;
+      color: $white-color;
+      background-color: $main-color;
       border-radius: 50%;
       display: flex;
       justify-content: center;
@@ -116,7 +117,7 @@
     &-head {
       display: flex;
       justify-content: space-between;
-      border-bottom: 1px solid #eaeaea;
+      border-bottom: 1px solid $border-color;
 
       &-info {
         display: flex;
@@ -131,11 +132,11 @@
     width: 37px;
     height: 37px;
     border-radius: 50%;
-    background-color: lightgray;
+    background-color: $t-color;
   }
 
   &-content__item-info__title {
-    color: #1e1e1e;
+    color: $text-dark-color;
     font-size: 13px;
     font-weight: 600;
   }
@@ -162,12 +163,12 @@
       top: 48px;
       left: 50%;
       transform: translateX(-50%);
-      color: #999999;
+      color: $text-light-grey-color;
       font-size: 12px;
       line-height: 12px;
     }
     &-actions {
-      border-top: 1px solid #eaeaea;
+      border-top: 1px solid $border-color;
       padding: 10px 0;
       display: flex;
       justify-content: space-between;
@@ -178,12 +179,12 @@
       width: 28px;
       height: 28px;
       border-radius: 50%;
-      color: #3369f3;
-      background-color: #fff;
+      color: $main-color;
+      background-color: $white-color;
     }
 
     &-actions-icon-file {
-      color: #999999;
+      color: $text-light-grey-color;
     }
 
     &-actions-input {
@@ -194,7 +195,7 @@
 
 .input-message {
   outline: 0;
-  border: 1px solid #eaeaea;
+  border: 1px solid $border-color;
   width: 100%;
   height: 100%;
   border-radius: 20px;
