--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -2,7 +2,7 @@
   width: 340px;
   min-height: 450px;
   border-radius: 12px;
-  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.14);
+  box-shadow: 0px 0px 6px $box-shadow-color;
   padding: 50px 30px;
   display: flex;
   flex-direction: column;
@@ -18,7 +18,7 @@
 
   &__title {
     text-align: center;
-    color: #1e1e1e;
+    color: $text-dark-color;
     font-size: 20px;
   }
 
@@ -28,12 +28,5 @@
     flex-direction: column;
     align-items: center;
     gap: 14px;
-  }
-  & div {
-    width: 100%;
-    font-size: 10px;
-    display: flex;
-    flex-direction: column;
-    color: red;
   }
 }
