--- a/src/styles/profile.scss
+++ b/src/styles/profile.scss
@@ -6,17 +6,17 @@
   flex-direction: column;
   align-items: center;
   padding: 60px;
-  font-family: "Inter", sans-serif;
+  font-family: $main-font-family;
 
   &__left {
     position: fixed;
     height: 100%;
-    background-color: #fbfbfb;
-    border-right: 1px solid #eaeaea;
+    background-color: $bg-color-light;
+    border-right: 1px solid $border-color;
     top: 0;
     left: 0;
-    width: 64px !important;
-    display: flex !important;
+    width: 64px;
+    display: flex;
     align-items: center;
     justify-content: center;
     gap: 10px;
@@ -25,7 +25,7 @@
   &__nav-icon svg {
     width: 28px;
     height: 28px;
-    color: #3369f3;
+    color: $main-color;
   }
 
   &__avatar {
@@ -33,7 +33,7 @@
     height: 130px;
     border-radius: 50%;
     margin-bottom: 10px;
-    background-color: gray;
+    background-color: $t-color;
     overflow: hidden;
 
     &-img {
@@ -42,7 +42,7 @@
   }
 
   &__user-data-name {
-    font-family: "Inter", sans-serif;
+    font-family: $main-font-family;
     font-style: normal;
     font-size: 16px;
     padding: 10px 0;
@@ -53,16 +53,16 @@
     width: 510px;
 
     &-item {
-      font-family: "Inter", sans-serif;
+      font-family: $main-font-family;
       font-size: 13px;
       padding: 10px 0;
       display: flex;
       justify-content: space-between;
-      border-bottom: 1px solid #eaeaea;
+      border-bottom: 1px solid $border-color;
       font-weight: 500;
 
       & .list-item--light {
-        color: #999999;
+        color: $text-light-grey-color;
       }
 
       &:last-child {
@@ -78,10 +78,10 @@
       text-decoration: none;
       display: block;
       padding: 10px 0;
-      border-bottom: 1px solid #eaeaea;
-      color: #3369f3;
+      border-bottom: 1px solid $border-color;
+      color: $main-color;
       font-size: 13px;
-      font-family: "Inter", sans-serif;
+      font-family: $main-font-family;
     }
   }
 }
