--- a/src/styles/registration.scss
+++ b/src/styles/registration.scss
@@ -1,7 +1,7 @@
 .registration-form {
   width: 340px;
   border-radius: 12px;
-  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.14);
+  box-shadow: 0px 0px 6px $box-shadow-color;
   padding: 30px 30px;
   display: flex;
   flex-direction: column;
@@ -14,15 +14,11 @@
     justify-content: center;
     align-items: center;
     gap: 16px;
-
-    // & input:last-child {
-    //   margin-bottom: 30px;
-    // }
   }
 
   &__title {
     text-align: center;
-    color: #1e1e1e;
+    color: $text-dark-color;
     font-size: 20px;
     padding: 10px;
   }
@@ -34,13 +30,5 @@
     align-items: center;
     gap: 14px;
     margin-top: 30px;
-  }
-
-  & div {
-    width: 100%;
-    font-size: 10px;
-    display: flex;
-    flex-direction: column;
-    color: red;
   }
 }
