--- a/src/styles/varColors.scss
+++ b/src/styles/varColors.scss
@@ -7,5 +7,5 @@ $text-light-grey-color: #999999;
 $white-color: #ffffff;
 $box-shadow-color: rgba(0, 0, 0, 0.14);
 $input-bd-color: #efefef;
-
 $t-color: #d3d3d3;
+$error-message-color: #ff0000;
