--- a/src/styles/chats.scss
+++ b/src/styles/chats.scss
@@ -2,7 +2,8 @@
   display: flex;
   width: 100%;
   height: 100%;
-  padding-left: 64px;
+  position: relative;
+  // padding-left: 64px;
 
   &__menu {
     width: 310px;
@@ -51,6 +52,10 @@
       height: 71px;
       display: flex;
       padding: 12px 0;
+
+      &:last-child {
+        border-bottom: 1px solid $border-color;
+      }
 
       &-img {
         width: 47px;
