did many changes

--- a/main.scss
+++ b/main.scss
@@ -1,9 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap");
-@import "src/styles/varColors.scss";
-@import "src//styles/icon.scss";
-@import "src/styles/global.scss";
-@import "src/styles/chats.scss";
-@import "src/styles/login.scss";
-@import "src/styles/registration.scss";
-@import "src/styles/profile.scss";
-@import "src/styles/error.scss";
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
+@import 'src/styles/varColors.scss';
+@import 'src//styles/icon.scss';
+@import 'src/styles/global.scss';
+// @import 'src/styles/chats.scss';
+@import 'src/styles/css/chatPage.css';
+@import 'src/styles/login.scss';
+@import 'src/styles/registration.scss';
+@import 'src/styles/profile.scss';
+@import 'src/styles/error.scss';
+@import 'src/styles/modal.scss';
