--- a/src/styles/profile.scss
+++ b/src/styles/profile.scss
@@ -35,9 +35,14 @@
     margin-bottom: 10px;
     background-color: $t-color;
     overflow: hidden;
+    position: relative;
+
+    &:hover .overlayAvatar {
+      display: flex;
+    }
 
     &-img {
-      background-color: cover;
+      background-image: cover;
     }
   }
 
@@ -62,6 +67,7 @@
       font-weight: 500;
 
       & .list-item--light {
+        position: relative;
         color: $text-light-grey-color;
       }
 
@@ -84,4 +90,45 @@
       font-family: $main-font-family;
     }
   }
+}
+
+.overlayAvatar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 130px;
+  height: 130px;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1001;
+  display: none;
+  cursor: pointer;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+}
+
+.input-change {
+  border: 0;
+  color: $text-dark-color !important;
+
+  &:focus {
+    outline-color: skyblue;
+  }
+}
+
+.avatar-link {
+  color: #fff;
+  font-size: 15px;
+
+  &:hover {
+    transform: scale(1.1);
+  }
+}
+
+.change-data-window {
+  width: auto;
+  border-radius: 12px;
+  background-color: #fff;
+  padding: 30px;
 }
