--- a/src/styles/profile.scss
+++ b/src/styles/profile.scss
@@ -22,6 +22,10 @@
     gap: 10px;
   }
 
+  &__nav-icon {
+    transform: rotate(180deg);
+  }
+
   &__nav-icon svg {
     width: 28px;
     height: 28px;
@@ -131,4 +135,6 @@
   border-radius: 12px;
   background-color: #fff;
   padding: 30px;
+  height: max-content;
+  margin-top: 250px;
 }
