--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -22,7 +22,7 @@
   margin: 0;
 
   display: flex;
-  align-items: center;
+  // align-items: center;
   justify-content: center;
   z-index: 1001;
 }
@@ -34,6 +34,8 @@
   border-radius: 12px;
   padding: 30px;
   z-index: 1002;
+  margin-top: 250px;
+  height: max-content;
 }
 
 .modal__content-title {
